# glimpse_mri

./: .gitattributes  .gitignore  LICENSE  README.md  build_jetson.shh  confirmed_paths.txt  make_msi.iss  pack_jetson_bundle.sh  prerequisites.sh
DICOM_test/dicom_test/: dicom_test.pro  main.cpp
HDF5_DICOM_test/h5_dicom_test/: h5_dicom_test.pro  main.cpp
HDF5_test/HDF5/: HDF5.pro  main.cpp
VTK-DICOM/vtk_dicom/: DicomLoader.cpp  DicomLoader.h  MainWindow.cpp  MainWindow.h  main.cpp  vtk_dicom.pro
dev_iterations/: .gitignore
dev_iterations/glimpse_dev_v2/controller/: app_controller.cpp
dev_iterations/glimpse_dev_v2/model/: io_ismrmrd.cpp  mri_engine.cu
dev_iterations/glimpse_dev_v2/src/: main.cpp
dev_iterations/glimpse_dev_v2_refactor/: glimpse_dev_v2_refactor.pro
dev_iterations/glimpse_dev_v2_refactor/controller/: app_controller.hpp
dev_iterations/glimpse_dev_v2_refactor/model/: io.cpp
dev_iterations/glimpse_dev_v2_refactor/src/: main.cpp
dev_iterations/glimpse_dev_v3/: .gitignore
dev_iterations/glimpse_dev_v4/: .gitignore  glimpse_dev_v4.pro
dev_iterations/glimpse_dev_v4/controller/: app_controller.hpp
dev_iterations/glimpse_dev_v4/glimpse_mri/: .gitignore
dev_iterations/glimpse_dev_v4/glimpse_mri/engine/: README_BUILD.txt  mri_engine_v_1_1.sln  mri_engine_v_1_1.vcxproj
dev_iterations/glimpse_dev_v4/glimpse_mri/engine/include/: common.hpp  engine_api.h  fft_and_rss_cpu.hpp  io_fastmri.hpp  io_ismrmrd.hpp  io_ismrmrd_api.h
dev_iterations/glimpse_dev_v4/glimpse_mri/engine/src/: common.cpp  engine.cpp  io_fastmri.cpp  io_ismrmrd.cpp
dev_iterations/glimpse_dev_v4/glimpse_mri/gui/controller/: app_controller.cpp
dev_iterations/glimpse_dev_v4/glimpse_mri/gui/model/: dicom_dll.cpp  io.hpp  io_ismrmrd.hpp
dev_iterations/glimpse_dev_v4/glimpse_mri/gui/src/: logger.hpp  main.cpp
dev_iterations/glimpse_dev_v4/glimpse_mri/gui/view/: mainwindow.hpp
dev_iterations/glimpse_dev_v4/model/: io.cpp
dev_iterations/glimpse_dev_v4/src/: main.cpp
dev_iterations/glimpse_dev_v4/view/: mainwindow.cpp  progress_splash.cpp
dev_iterations/mri__engine_lib_dev_1/: README.txt  mri__engine_lib_dev_1.pro
dev_iterations/mri__engine_lib_dev_1/include/: mri_engine_api.h  mri_engine_export.hpp
dev_iterations/mri__engine_lib_dev_1/samples/: qt_loader_example.cpp
dev_iterations/mri__engine_lib_dev_1/src/: api_exports.cpp  mri_engine.cu
dicom_io_lib/: CMakeLists.txt  dicom__io_lib.pro  dicom_io_lib.pro
dicom_io_lib/include/: dicom_api.h
dicom_io_lib/src/: dicom_io_lib.cpp
docs/: build_jetson_orin_nano.md  jetson_build.md  rpi5_aarch64_build.md  smoke_benchmarks.md  ubuntu_x86_64_build.md
documentation/: plan.tex
engine/: .gitignore  CMakeLists.txt  mri_engine.pro  mri_engine_v_1_1.vcxproj  mri_engine_v_1_1.vcxproj.filters
engine/include/: common.hpp  engine_api.h  io_fastmri.hpp  io_ismrmrd.hpp
engine/src/: common.cpp  engine.cpp  fft_and_rss_cpu.cpp  fft_rss.cu  io_fastmri.cpp  io_ismrmrd.cpp
glimpse/: DicomLoader.cpp  DicomLoader.h  MainWindow.cpp  MainWindow.h  glimpse.pro  main.cpp
glimpse_dev_3/model/: io.cpp  io.hpp  io_ismrmrd.cpp  io_ismrmrd.hpp
glimpse_dev_4/: .gitignore
glimpse_dev_v1/: README.md  glimpse_dev_v1.pro
glimpse_dev_v1/controller/: app_controller.cpp  app_controller.hpp
glimpse_dev_v1/model/: io_fastmri.cpp  mri_engine.hpp
glimpse_dev_v1/src/: common.hpp  main.cpp
glimpse_dev_v1/view/: mainwindow.cpp
glimpse_dev_v2/: glimpse_dev_v2.pro
glimpse_dev_v2/controller/: app_controller.cpp
glimpse_dev_v2/model/: io_fastmri.cpp  io_ismrmrd.cpp  mri_engine.cu
glimpse_dev_v2/view/: mainwindow.cpp  mainwindow.hpp
glimpse_dev_v3/model/: mri_engine.hpp
glimpse_dev_v3/src/: main.cpp
graphics/: copy_icons.ps1  make_icons.ps1
gui/: .gitignore  CMakeLists.txt  deploy_win_release.ps1  glimpseMRI.pro  glimpse_dev_v4.pro
gui/assets/: app_win.rc  assets.qrc
gui/controller/: app_controller.cpp  app_controller.hpp
gui/local/: autolink_dcmtk.pri
gui/model/: dicom_dll.hpp  dicom_interface.cpp  engine_api.h  io.cpp  io.hpp  io_fastmri.hpp
gui/scripts/: install_desktop_icon.sh
gui/src/: build_info.hpp  image_utils.hpp  main.cpp
gui/view/: mainwindow.cpp  mainwindow.hpp  progress_splash.hpp
h5_mri_dicom/: h5_mri_dicom.pro
h5_mri_dicom/src/: fastmri_reader.cpp  fastmri_reader.h  ismrmrd_reader.cpp  ismrmrd_reader.h  main.cpp  read_hdf5.cpp  read_hdf5.h  utils.cpp  utils.h
scripts/core/: build_modules.sh  common.sh  detect_buildsystem.sh  detect_cuda.sh  pack_bundle.sh
scripts/targets/jetson/: build.sh  install_deps.sh  install_desktop.sh  pack.sh
scripts/targets/rpi5_aarch64/: build.sh  pack.sh  prerequisites_build.sh  prerequisites_run.sh
scripts/targets/ubuntu_x86_64/: build.sh  pack.sh  prerequisites_build.sh  prerequisites_run.sh
src/: image_utils.hpp
view/: mainwindow.cpp  mainwindow.hpp
